<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">三华配送</string>

    //顶部menu
    <string name="menu_attend">签到/签出</string>
    <string name="menu_see">查看记录</string>
    <string name="menu_guide">配送端使用指南</string>
    <string name="menu_out">退出登陆</string>
    <string name="login_name">账号</string>
    <string name="login_password">密码</string>
    <string name="login">登陆</string>

    //hint
    <string name="newest_order">最新订单</string>
    <string name="deliver_sign_in">配送员签到</string>
    <string name="deliver_sign_out">配送员签出</string>
    <string name="sign_in">签到</string>
    <string name="sign_out">签出</string>
    <string name="notes">您可以使用不同的配送员账号登陆</string>
    <string name="order_hint">您暂时没有新订单送达~</string>
    <string name="record_hint">您还没有订单记录~</string>
    <string name="loading_hint">请稍等...</string>
    <string name="error1">账号密码不能为空！</string>
    <string name="error2">请检查您的账号密码！</string>
    <string name="error3">请检查网络！</string>
    <string name="error4">登陆失败！</string>

    //订单页面

    <string name="clear_order">全部清除</string>
    <string name="order_record">订单记录</string>

    <string name="complte_order">确定完成订单吗?</string>
    <string name="complte">是的,确定</string>

    <string name="locate">定位地址</string>
    <string name="call">联系用户</string>
    <string name="order_number">订单编号:</string>
    <string name="order_detail">订单详情</string>
    <string name="order_sending">正在配送</string>
    <string name="noti_order_hint">您有一个新的订单!</string>
    <string name="noti_opent_hint">请点击查看!</string>


</resources>
