<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MyActivity">
    <item
        android:id="@+id/action_attend"
        android:icon="@drawable/attend"
        android:orderInCategory="100"
        android:title="@string/menu_attend"/>
    <item
        android:id="@+id/action_see"
        android:icon="@drawable/see"
        android:orderInCategory="110"
        android:title="@string/menu_see"/>

    <item
        android:id="@+id/action_out"
        android:icon="@drawable/out"
        android:orderInCategory="120"
        android:title="@string/menu_out"/>

    <!--<item-->
    <!--android:id="@+id/action_guide"-->
    <!--android:orderInCategory="130"-->
    <!--android:icon="@drawable/guide"-->
    <!--android:title="@string/menu_guide" />-->
</menu>
