<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_padding">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/about_current_hero" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_edit_vertical_magin"
        android:background="@drawable/login_edit_bg"
        android:drawableRight="@drawable/fork_selector"
        android:ems="10"
        android:hint="@string/login_name"
        android:inputType="number"
        android:paddingLeft="@dimen/login_edit_left_padding"
        android:paddingRight="@dimen/login_edit_left_padding"
        android:textSize="@dimen/login_edit_size" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_edit_vertical_magin"
        android:background="@drawable/login_edit_bg"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="number"
        android:paddingLeft="@dimen/login_edit_left_padding"
        android:textSize="@dimen/login_edit_size" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_bt_height"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_edit_vertical_magin"
        android:background="@drawable/login_bt_selector"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/login_bt_size" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_edit_vertical_magin"
        android:text="@string/notes"
        android:textColor="@color/light_black" />


</RelativeLayout>